=====================================================
VERSION 0.0.5

IN PROGRESS...

+ Dialogs with options that are visible only in certain conditions (based on game state)
* Fixes of dialog view (multi-line replies)
* Some crashes fixed
+ Dialog listeners
+ New random encounters

=====================================================
VERSION 0.0.4

07.03.2013

* Nice mountain tiles from anon
+ More life in Solar system - added space station and humanity spaceships with dummy dialogs
* Alien starships will no longer spawn in quest and unique locations, like Solar system.
+ Screen with detailed calculation of research progress upon returning to Earth
+ Added private message system and screen
+ Earth research system. Solar system state changes now based on stuff carried from space by player.
+ Calculating global research score.

======================================================
VERSION 0.0.3

11.02.2013

+ Research projects can now show report screen when finished
+ Research projects can now spawn new projects when they are finished
* Refactored world generation, split into multiple classes
+ Added universal json resource manager for loading game entity descriptions.
+ Added content - some new researches, dialogs, reports and artifacts

======================================================
VERSION 0.0.2

30.01.2013

+ World generation progress is now shown when 'New Game' is pressed
* World generation is now multi-threaded
+ NPC ships will now return fire if attacked
+ Player ship can now be destroyed in combat
+ Added gameover message screen with image
+ Added ability to repair hull for resources
+ Added Help screen

======================================================
VERSION 0.0.1

23.01.2013

First version with minimum set of required features:

+ Main menu and save/load functionality
+ Launching a new game, generating random galaxy
+ Travelling over global map, entering star system