@@ -101,5 +101,6 @@
     <!-- story -->
     <resource type="image" id="story_beginning">sprites/story/construction.png</resource>
     <resource type="image" id="ship_destroyed_gameover">sprites/gui/ship_destroyed_fail_screen.png</resource>
+    <resource type="image" id="retirement_gameover">sprites/story/retirement.png</resource>
     <resource type="image" id="obliterator_background">sprites/ships/obliterator_background.png</resource>
 </resources>
